// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when config rule has multiple match definitions where one is invalid should not be valid 1`] = `
Object {
  "category": "error",
  "fileMap": Object {
    "fullPath": "file/path",
    "lineNumber": 0,
  },
  "message": "Entity name 'invalid' in configuration file does not match any entities of the given type and namespace criteria.",
  "sourceMap": null,
  "validatorName": "AnnotateModelWithConfiguration",
}
`;

exports[`when config rule is for a single entity type in a single named namespace with a specific name with no match should not be valid 1`] = `
Object {
  "category": "error",
  "fileMap": Object {
    "fullPath": "file/path",
    "lineNumber": 0,
  },
  "message": "Entity name 'invalid' in configuration file does not match any entities of the given type and namespace criteria.",
  "sourceMap": null,
  "validatorName": "AnnotateModelWithConfiguration",
}
`;

exports[`when config rule is for a single named namespace that does not exist should not be valid 1`] = `
Object {
  "category": "error",
  "fileMap": Object {
    "fullPath": "file/path",
    "lineNumber": 0,
  },
  "message": "Namespace 'invalid' in configuration file does not match a MetaEd project namespace. Either include a project with that namespace or remove the configuration entry.",
  "sourceMap": null,
  "validatorName": "AnnotateModelWithConfiguration",
}
`;
